Test08 Fix: Tooltip overflow resolved
The following was changed:
-The tooltip css class that the fdt uses made use of a maximum width. I
increased it slightly and tested it against the French language
tooltips. It no longer overflows.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -633,7 +633,7 @@ button {
 /* Tooltips */
 .gpii-fd-tooltip {
     width: auto;
-    max-width: 7em;
+    max-width: 9em;
     font-size: 2rem;
     padding: 0.5rem;
     background-color: #fed73a;
